[metadata]
name = torseeker
version = 1.0.2
author = eldiablo
author_email = avsarria@gmail.com
description = A tool used to query information about Tor relays by using a two letter country code or via Tor IP addresses.
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_file = LICENSE
platforms = any
keywords = tor, relay, network, ip, anonymity
url = http://github.com/rwprimitives/tor-seeker
project_urls = 
    Source = http://github.com/rwprimitives/tor-seeker
    Bug Tracker = https://github.com/rwprimitives/tor-seeker/issues
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: Science/Research
    Intended Audience :: System Administrators
    Operating System :: OS Independent
    Topic :: Internet
    Topic :: Scientific/Engineering
    Topic :: System :: Networking
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation
    Programming Language :: Python :: Implementation :: CPython


[options]
package_dir =
    = src
packages = find:
python_requires = >=3


[options.packages.find]
where = src


[options.entry_points]
console_scripts =
    torseeker = torseeker.torseeker:main


[options.extras_require]
codestyle =
    flake8 >= 3, <4


[flake8]
max-line-length = 120
ignore =
    E203,   # Ignore "whitespace before ':'"
    W605,   # Ignore "invalid escape sequence"
    E221    # Ignore "multiple spaces before operator"
exclude =
    .git,
    __pycache__,
    docs/source/conf.py,
    old,
    build,
    dist


[bdist_wheel]
universal = 1
